Working on protobuf serialization instead of relying on smile